syntax = "proto3";

option csharp_namespace = "cmclean.Infrastructure.Protos";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service ContactProtoService {
  rpc GetContacts(google.protobuf.Empty) returns (GetAllContactsProtoResponse);
  rpc GetContactById(GetContactByIdProtoRequest) returns (GetContactByIdProtoResponse);
  rpc GetContactByFilter(GetContactByFilterProtoRequest) returns (GetContactByFilterProtoResponse);
  rpc CreateContact(CreateContactProtoRequest) returns (CreateContactProtoResponse);
  rpc UpdateContact(UpdateContactProtoRequest) returns (UpdateContactProtoResponse);
  rpc DeleteContact(DeleteContactProtoRequest) returns (DeleteContactProtoResponse);
}

message ContactProtoModel {
  string Id = 1;
  string Salutation = 2;
  string FirstName = 3;
  string LastName = 4;
  string DisplayName = 5;
  google.protobuf.Timestamp BirthDate = 6;
  google.protobuf.Timestamp CreationTimestamp = 7;
  google.protobuf.Timestamp LastChangeTimeStamp = 8;
  bool NotifyHasBirthdaySoon = 9;
  string Email = 10;
  string Phonenumber = 11;
}
message GetAllContactsProtoResponse
{
  repeated ContactProtoModel Contacts = 1;
};

message GetContactByIdProtoRequest{
  string ContactId =1;
}
message GetContactByIdProtoResponse
{
  ContactProtoModel Contact = 1;
};

message GetContactByFilterProtoRequest
{
   string FirstName = 1;
   string LastName = 2;
   string DisplayName = 3;
   google.protobuf.Timestamp BirthDate = 4;
   string Email = 5;
   string Phonenumber = 6;
}

message GetContactByFilterProtoResponse
{
 repeated ContactProtoModel Contacts = 1;
};

message CreateContactProtoRequest {
  string Salutation = 1;
  string FirstName = 2;
  string LastName = 3;
  string DisplayName = 4;
  google.protobuf.Timestamp BirthDate = 5;
  string Email = 6;
  string Phonenumber = 7;
};

message CreateContactProtoResponse {
  ContactProtoModel Contact = 1;
};

message UpdateContactProtoRequest {
  string Id = 1;
  string Salutation = 2;
  string FirstName = 3;
  string LastName = 4;
  string DisplayName = 5;
  google.protobuf.Timestamp BirthDate = 6;
  string Email = 7;
  string Phonenumber = 8;
};

message UpdateContactProtoResponse {
  bool status = 1;
};

message DeleteContactProtoRequest {
  string id = 1;
}

message DeleteContactProtoResponse {
  bool status = 1;
}

